[package]
name = "johnbox"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
async-compression = { version = "0.4.10", features = ["brotli", "tokio"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
futures-util = "0.3.30"
rand = { version = "0.8.5", default-features = false, features = ["std", "getrandom"] }
reqwest = { version = "0.12.4", features = ["json", "stream", "gzip"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
helix-core = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-stdx = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
helix-lsp = { git = "https://github.com/helix-editor/helix", rev = "2cadec0" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter = "0.22.6"
tree-sitter-javascript = "0.21.2"
uuid = { version = "1.8.0", features = ["serde"] }
regex-cursor = "0.1.4"
fd-lock = "4.0.2"
mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }
tree-sitter-css = "0.21.0"
toml = "0.8.13"
dashmap = "5.5.3"
nanoid = "0.4.0"
heapless = "0.8.0"
tiny-skia = "0.11.4"
csscolorparser = { version = "0.6.2", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
